package connect4.controllers;

public interface AcceptorController {

    void accept(ControllersVisitor controllersVisitor);
}
